<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GrupoOnce</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="log_in">Iniciar sesión</string>
    <string name="sign_up">Registrarse</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="company_name">Nombre de la compañia</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="user">Usuario:</string>
    <string name="admin_user">Usuario: Administrador</string>
    <string name="new_messages">Mensajes nuevos:</string>
    <string name="left_item_corner">◥</string>
    <string name="right_item_corner">◣</string>
    <string name="configuration">Configuración</string>
    <string name="old_password">Contraseña actual</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="change_password">Actualizar contraseña</string>
    <string name="show_password">Mostrar contraseña</string>
    <string name="state_image_description">Image for each state</string>
    <string name="image_close_conversation_description">Image button to close a conversation</string>
    <string name="charts">Gráficas</string>
    <string name="closing_conversation_description">Gráficas</string>
    <string name="save_chart_description">Gráficas</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="comment">Comentario sobre la consulta:</string>
    <string name="close_conversation_hint">Describe brevemente el caso</string>
    <string name="separator">|</string>
    <string name="certification">Certificación</string>
    <string name="certification_explanation">Buscando la excelencia en sus procesos GRUPO ONCE obtuvo la certificación: ISO 9001&#8211;2008 Grupo Once "EVALUACIÓN DE ATENCIÓN AL CLIENTE".\n\n Con la certificadora inglesa: BSI Group México, una de las 5 casas certificadoras de mayor prestigio en el mundo.\n</string>
    <string name="customer_service">Servicio al cliente</string>
    <string name="customer_service_explanation">Permite a sus clientes dedicarse a la operación diaria y generación de nuevos productos innovadores, mientras que nosotros nos dedicamos a dar seguimiento a la calidad del servicio proporcionado a sus clientes. \n\nLa empresa que tiene éxito actualmente no es la que tiene los mejores productos o la mayor variedad de éstos, sino la que tiene a un número mayor de clientes, o al menos a los más rentables. \n\nNuestro Centro de Atención a Clientes permite que las empresas aumenten la satisfacción y lealtad de sus clienes en su interacción con las diversas áreas de la empresa, atendiéndolo coordinadamente en todo momento, costituyendo una fuente de información valiosa y de toma de decisión para la Alta Dirección.\n</string>
    <string name="area1">Recibos</string>
    <string name="area2">Facturas</string>
    <string name="area3">IMSS</string>
    <string name="area4">Jurídico</string>
    <string name="area5">Requerimiento especial</string>
    <string name="area6">Tesorería</string>
    <string name="area7">Operativo</string>
    <string name="area8">Contabilidad</string>
    <string name="area9">Auditoría</string>
    <string name="send_email_charts">Mandar correo con comentarios</string>
    <string name="notification_string">Tienes un nuevo mensaje</string>

    <string-array name="states_array">
        <item>Aguascalientes</item>
        <item>Celaya</item>
        <item>Culiacán</item>
        <item>DF</item>
        <item>Guadalajara</item>
        <item>León</item>
        <item>Querétaro</item>
        <item>San Luis Potosí</item>
        <item>Tijuana</item>
        <item>Torreón</item>
        <item>Zacatecas</item>
    </string-array>
    <string-array name="states_array_img_ids">
        <item>aguascalientes</item>
        <item>celaya</item>
        <item>culiacan</item>
        <item>df</item>
        <item>guadalajara</item>
        <item>leon</item>
        <item>queretaro</item>
        <item>san_luis</item>
        <item>tijuana</item>
        <item>torreon</item>
        <item>zacatecas</item>
    </string-array>
    <string-array name="faq_array">
        <item>¿En qué horario puedo usar el chat con un asesor en la app?</item>
        <item>R: El servicio está disponible desde las 9:00am hasta las 8:00pm.</item>
        <item>¿Tiene algún costo extra el servicio al cliente por chat?</item>
        <item>R: El servicio no tiene ningún costo extra, es completamente gratuito.</item>
        <item>¿Cómo puedo acceder a las redes sociales de Grupo Once?</item>
        <item>R: Los botones superiores te llevan directamente a las redes sociales.</item>
    </string-array>
    <string-array name="services_array">
        <item>Reportes estratégicos para la alta dirección</item>
        <item>Seguimiento a interacciones y requerimientos</item>
        <item>Procesos escalables a niveles administrativos</item>
        <item>Administración de relaciones con el cliente (CRM)</item>
        <item>Administración de canales de cobranza</item>
        <item>Administración de canales de venta</item>
    </string-array>
    <string-array name="services_section2_array">
        <item>Telefonía</item>
        <item>Redes sociales</item>
        <item>Navegación asistida</item>
        <item>Correo electrónico</item>
        <item>App móvil</item>
        <item>Chat</item>
    </string-array>
    <string-array name="services_section3_array">
        <item>Confianza</item>
        <item>Confidencialidad</item>
        <item>Responsabilidad</item>
        <item>Lealtad</item>
    </string-array>

    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_activity_faq">FaqActivity</string>
    <string name="faq">Preguntas frecuentes</string>
    <string name="services">Servicios</string>
    <string name="chat">Chat con un asesor</string>
    <string name="sign_out">Cerrar sesión</string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="title_main_menu">Estamos para servirte</string>
    <string name="title_activity_services">ServicesActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="chat_input_holder">Escribe tu consulta</string>
    <string name="title_activity_main_menu_advisor">MainMenuAdvisorActivity</string>
    <string name="services_section2">Multicanal</string>
    <string name="services_section3">Valores</string>
    <string name="title_activity_admin_menu">AdminMenuActivity</string>
    <string name="title_activity_adviser_configuration">AdviserConfigurationActivity</string>
    <string name="title_activity_charts">ChartsActivity</string>

</resources>